--- a/src/Sitecore.Support.369262/App_Config/Include/zzz/Sitecore.Support.369262.config
+++ b/src/Sitecore.Support.369262/App_Config/Include/zzz/Sitecore.Support.369262.config
@@ -1,4 +1,7 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
   <sitecore role:require="Standalone OR ContentManagement OR ContentDelivery OR Processing OR Reporting">
+      <services>
+          <configurator type="Sitecore.Support.ExperienceExplorer.DependencyInjection.ExplorerServiceConfigurator, Sitecore.Support.369262" />
+      </services>
   </sitecore>
 </configuration>
