--- a/src/Sitecore.Support.369262/packages.config
+++ b/src/Sitecore.Support.369262/packages.config
@@ -1,4 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SC.Microsoft.Extensions.DependencyInjection" version="9.0.2" targetFramework="net462" />
+  <package id="SC.Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.2" targetFramework="net462" />
+  <package id="SC.Sitecore.Analytics" version="9.0.2" targetFramework="net462" />
+  <package id="SC.Sitecore.Analytics.Model" version="9.0.2" targetFramework="net462" />
+  <package id="SC.Sitecore.ExperienceExplorer.Analytics" version="9.0.2" targetFramework="net462" />
+  <package id="SC.Sitecore.ExperienceExplorer.Core" version="9.0.2" targetFramework="net462" />
   <package id="SC.Sitecore.Kernel" version="9.0.2" targetFramework="net462" />
+  <package id="SC.Sitecore.Marketing" version="9.0.2" targetFramework="net462" />
 </packages>
